Refactor rentVehicle() service method to return a mock VehicleRental enabled with Spring Profile in TravelAgent